# game-of-life

./: .gitignore  build.spec  gol.py  lexicon.py  main.py  pyproject.toml  readme.md
src/game_of_life/: __init__.py  __main__.py
src/game_of_life/patterns/: glider.cells  snark_loop.cells
